--- a/Lang.ini
+++ b/Lang.ini
@@ -1,7 +1,3 @@
-[Into]
-Loading=Carregando
-Error=Arquivo não encontrado
-
 [Main]
 Account=Account:
 Zen=Zen:
@@ -42,13 +38,42 @@ RemHint=Remover
 AddHint=Adicionar
 EditGuildForm=Editando guild:
 All=(Todas)
-
 Assistent=Assistente
 GuildMaster=GuildMaster
 NormalPlayer=Normal
 BattleMaster=Battle Master
 Assistent2=Assistente:
 BattleMasters=BattleMasters:
+Others=Outras
+DNSMuonline=DNS(Padrão:MuOnline):
+DNSMeMuOnline=DNS(Padrão:MuOnlineJoinDB ou MuOnline)
+User=Usuário(Padrão=sa):
+Password=Senha:
+Database=Database:
+Version=Versão:
+Ancient2=Ancient:
+MaxGuilds= Max Guilds:
+VersionTip1=WZ,CMT para 1.0n \ mods
+VersionTip2=MG para 1.02d
+VersionTip3=MX para 1.02i
+VersionTip4=Outras para as outras
+AncientTip=Valor no item pra ser Ancient +X Stamina
+Maxguildstip=Numero máximo de guilds para o Guild Editor
+ConfigForm=Configuração do CMTedit.ini
+ConfigOthers=Configurando "Others"
+ConfigMuOnline=Configurando "MuOnline"
+ConfigMeMuOnline=Configurando "Me_MuOnline"
+ConfigMSG=Escolha o que você vai configurar ao lado!
+
+Options=Opções
+
+Ancientnormal=Normal
+Ancient5=Ancient +5 Stamina
+Ancient10=Ancient +10 Stamina
+Ancient52=Ancient +5 Stamina:
+Ancient102=Ancient +10 Stamina:
+
+
 
 [Mainbtn]
 Itemsize=Tamanho do Item:
@@ -86,7 +111,10 @@ remassistent=Tirar Assistente
 rembattlemaster=Tirar Battle Master
 SetBattleMaster=Setar Battle Master
 SetAssistent=Setar Assistente
-
+skin=Skin
+ReadDatabases=Ler Databases do DNS
+Config=Configurar
+EditCMTedit=Editar CMTedit.ini
 
 [MainMSG]
 Question1=Salvar alterações no Vault?
@@ -97,10 +125,12 @@ Question4=Salvar alterações no Character?
 Question5=Voce tem certeza que deseja apagar o Inventorio?
 Question6=Voce tem certeza que deseja excluir este skill?
 Question7=Voce tem certeza que deseja substituir este skill?
-
 Question8=Voce tem certeza que deseja remover esse char da guild?
 Question9=Voce tem certeza que deseja excluir essa guild?
 Question10=Voce tem certeza que deseja setar esse char como Guild Master e deixar o Guild Master atual sendo char normal na guild?
+Question11=Voce tem certeza que deseja remover essa guild?
+Question12=Voce tem certeza que deseja fechar o editor?
+
 
 Confirm1=O Vault foi salvo com Sucesso!
 Confirm2=O Character foi salvo com Sucesso!
@@ -123,7 +153,7 @@ Error6=Não foi possivel salvar o Vault!
 Error7=Selecione um item para adicionar
 Error8=A durabilidade não pode estar em branco
 Error9=A durabilidade deve ser um numero entre 0 e 255
-Error10=Não foi possivel encontrar nenhuma account
+Error10=Não foi possivel encontrar nenhum registro!
 Error11Part1=O item 
 Error11Part2=não pode ser adicionado porque ja possui um item nesse lugar
 Error12=Não foi possivel salvar o Character!
@@ -139,9 +169,14 @@ Error19=Selecione uma guild
 Error20=Esse Character já é o guild master
 Error21=Selecione um character para adicionar na guild
 Error22=Você não pode remover o guild master da guild sem antes setar outro
-
 Error23=Ja existem 3 Mestres de Batalha. Antes de adicionar outro remova 1!
 Error24=Ja existe 1 assistente. Antes de adicionar outro Remova-o!
+
+Error25=A database selecionada não existe! Selecione uma existente!
+Error26=Ocorreu um erro ao ler as suas configurações! Verifique todos os campos de configuração!
+Error27=Foi encontrado um erro na configuração de seu CMTedit.ini !
+Error28=O ODBC está incorreto! Verifique se está escrito certo!
+Error29=Não foi encontrado seu CMTedit.ini !
 
 [Excwe]
 wemode1=Increases Mana After Monster +Mana/8
